[tool.poetry]
name = "boiler-plate"
version = "0.0.0"
description = "dev boiler plate template for Python + Poetry + Cursor/VS CODE"
authors = ["Kevin <kevin.armengol@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <4.0"
openai = "1.5.0"
instructor = "0.4.5"
deepdiff = "6.7.1"
termcolor = "2.3.0"
gradio = "^4.7.1"
python-dotenv = "1.0.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
ipykernel = "^6.26.0"
jupytext = "^1.15.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
